--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "type": "module",
   "scripts": {
     "start:node": "node ./src/js/app.js",
     "ex": "node ./src/js/mock/example.js",
-
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "lint": "eslint .", 
+    "lint": "eslint .",
     "test": "jest",
     "coverage": "jest --coverage",
     "preshow:coverage": "npm run coverage",
@@ -24,6 +22,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.9.5",
     "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
